# genassign_blast

./: CMakeLists.txt  easy_blast.cpp
include/: blast.h  memSingleBlock.h  parameters.h  print.h
src/: genwin.c  parameters.c  print.c
